v1.08 xx-Dec-07
Fixed bug in reporting of maximum transfer size.

v1.07 23-Jun-07
Fixed bug in adding extensions on filenames.

v1.06 28-Apr-07
Removed limit on number of concurrent connections.
Fixed bug which could result in incorrect file sizes if setattr request done shortly after writing without setting the filesize.
Added option to set filetype of MacOS resource forks, ignoring the filename extension.

v1.05 16-Oct-06
Files with a UnixEx filetype now get execute permissions set.
Fixed a bug when reducing the size of a file straight after writing to it may get ignored.

v1.04 3-Sep-06
Added support for NFSv4.
Added support for filename encoding translation.
Added options to enable or disable individual transports and NFS protocols.

v1.03 21-May-06
Fix problems with renaming or deleting files shortly after reading or writing their contents.

v1.02  7-May-06
Fix bug that could cause a data abort when deleting files or directories.

v1.01 28-Feb-06
Ensure the correct toolbox modules are loaded.
Fix script generated for auto load feature.

v1.00 26-Feb-06
First Release.
